--- a/frontend/home.html
+++ b/frontend/home.html
@@ -21,7 +21,10 @@
       <input type="number" id="inputy" min="0" max="2" step="1" value="0">
       <label for="inputz"> z coordinate</label>
       <input type="number" id="inputz" min="0" max="2" step="1" value="0">
-      <input type="button" id="pressDraw" onclick="drawFromInputs()" value="drawPoint">
+      <input type="button" id="pressDraw" onclick="drawFromInputs()" value="Add ball drawing">
+      <br>
+      <input type="button" id="ccw" onclick="rotate(-15)" value="rotate -15">
+      <input type="button" id="cw" onclick="rotate(15)" value="rotate 15">
     </form>
 
 
