--- a/backend/pages/home.html
+++ b/backend/pages/home.html
@@ -12,7 +12,7 @@
     <canvas id="gfx" height="400" width="400">
     </canvas>
 
-    <script src="frontEndScript.js"> </script>
+    <script src="script/frontEndScript.js"> </script>
     
     <form>
       <label for="inputx"> x coordinate</label>
