--- a/frontend/home.html
+++ b/frontend/home.html
@@ -42,6 +42,7 @@
     <form>
       <input type="button" id="ccw" onclick="rotate(-15)" value="rotate -15">
       <input type="button" id="cw" onclick="rotate(15)" value="rotate 15">
+      <input type="button" id="insertout" onclick="formalise()" value="Add and log to attack vectors">
     </form>
     
     
